implemented view user's projects page

--- a/oldViews/views_5/index.handlebars
+++ b/oldViews/views_5/index.handlebars
@@ -3,4 +3,5 @@
       <a class="project-button w-button" href="/project">+&#xA0;New Project</a>
       <a class="project-button w-button" href="/projects">View Project</a>
     </div>
-  </main>
+    <p>{{ token }}</p>
+</main>
