--- a/oldViews/views_6/css/vbamobile.css
+++ b/oldViews/views_6/css/vbamobile.css
@@ -206,7 +206,7 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 1rem;
+  margin-top: 5%;
   -webkit-justify-content: space-around;
   -ms-flex-pack: distribute;
   justify-content: space-around;
@@ -251,7 +251,7 @@ body {
 }
 
 .login-container {
-  margin-top: 1rem;
+  margin-top: 5%;
   padding: 1%;
   -webkit-align-self: center;
   -ms-flex-item-align: center;
@@ -322,7 +322,6 @@ body {
   -webkit-flex-basis: 20%;
   -ms-flex-preferred-size: 20%;
   flex-basis: 20%;
-  background-color: rgba(32, 21, 71, .8);
 }
 
 .project-button {
@@ -342,7 +341,6 @@ body {
   -webkit-align-self: stretch;
   -ms-flex-item-align: stretch;
   align-self: stretch;
-  background-color: rgba(32, 21, 71, .8);
 }
 
 .project-edit-form {
@@ -383,7 +381,6 @@ body {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  background-color: rgba(32, 21, 71, .8);
 }
 
 .form-inner-container {
@@ -415,7 +412,7 @@ body {
 
 .projects-list {
   display: block;
-  margin-top: 1rem;
+  margin-top: 20px;
   margin-bottom: 0px;
   padding-left: 0px;
 }
@@ -454,18 +451,6 @@ body {
 
 .project-card-desc {
   margin: 2%;
-}
-
-.titles-link {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-  -webkit-align-items: baseline;
-  -ms-flex-align: baseline;
-  align-items: baseline;
-  text-decoration: none;
 }
 
 @media (max-width: 991px) {
@@ -711,7 +696,6 @@ body {
     width: 40px;
   }
   .form-header {
-    margin-top: 1rem;
     font-size: 28px;
   }
   .form-buttons {
@@ -814,7 +798,7 @@ body {
     flex: 0 auto;
   }
   .form-button {
-    background-color: rgba(32, 21, 71, .8);
+    background-color: #00b2a9;
   }
   .survey-form {
     padding-right: 4%;
