--- a/oldViews/views_5/login.handlebars
+++ b/oldViews/views_5/login.handlebars
@@ -7,7 +7,7 @@
           <input class="w-input" data-name="username" id="username-2" maxlength="256" name="username" placeholder="Enter your username" required="required" type="text">
           <label for="password">Password :&#xA0;</label>
           <input class="w-input" data-name="password" id="password" maxlength="256" name="password" placeholder="Enter your password" required="required" type="password">
-          <input class="form-button w-button" data-wait="Please wait..." type="submit" value="Log in">
+          <input class="w-button" data-wait="Please wait..." type="submit" value="Log in">
         </form>
         <div class="w-form-done">
           <div>Thank you! Your submission has been received!</div>
