--- a/oldViews/views_5/project.handlebars
+++ b/oldViews/views_5/project.handlebars
@@ -1,36 +1,5 @@
-<!DOCTYPE html>
-<!-- Last Published: Tue Sep 27 2016 10:43:24 GMT+0000 (UTC) -->
-<html data-wf-page="57db58be05ab7ada438b83d8" data-wf-site="57ced8c91d3807cb6dad5f35">
-<head>
-  <meta charset="utf-8">
-  <title>New Project</title>
-  <meta content="New Project" property="og:title">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/components.css" rel="stylesheet" type="text/css">
-  <link href="css/vbamobile.css" rel="stylesheet" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
-  <script type="text/javascript">
-    WebFont.load({
-      google: {
-        families: ["Roboto:regular"]
-      }
-    });
-  </script>
-  <script src="js/modernizr.js" type="text/javascript"></script>
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
-</head>
-<body class="body">
-  <header class="header">
-    <div class="titles">
-      <h1 class="title">VBA</h1>
-      <h2 class="sub-title">mobile</h2>
-    </div>
-    <a class="username" href="#">username</a>
-  </header>
-  <main class="content-wrapper">
-    <div class="form">
+<main class="content-wrapper">
+    <div class="project-edit-form">
       <h1 class="form-header">New project</h1>
       <div class="w-form">
         <form action="/project" class="project-form" data-name="Email Form" data-redirect="/" id="email-form" method="post" name="email-form">
@@ -67,8 +36,3 @@
       </div>
     </div>
   </main>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-  <script src="js/vbamobile.js" type="text/javascript"></script>
-  <!--[if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
-</body>
-</html>
