--- a/oldViews/views_6/layouts/main.handlebars
+++ b/oldViews/views_6/layouts/main.handlebars
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Last Published: Tue Sep 27 2016 06:52:20 GMT+0000 (UTC) -->
+<!-- Last Published: Tue Sep 27 2016 10:43:24 GMT+0000 (UTC) -->
 <html data-wf-page="57da536ca0b21bf9369455e0" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head>
   <meta charset="utf-8">
@@ -24,8 +24,10 @@
 <body class="body">
   <header class="header">
     <div class="titles">
-      <h1 class="title">VBA</h1>
-      <h2 class="sub-title">mobile</h2>
+      <a class="titles-link w-inline-block" href="/">
+        <h1 class="title">VBA</h1>
+        <h2 class="sub-title">mobile</h2>
+      </a>
     </div>
 	{{#if loggedIn}}
 		<p class="username">{{username}}</p>
