Added new webflow template view detailed survey information

--- a/__views/viewsurveys.handlebars
+++ b/__views/viewsurveys.handlebars
@@ -8,7 +8,7 @@
           <div>Status : {{this.status}}</div>
           <div class="project-card-footer">
             <div class="project-card-dates">{{this.start}} &#x279E; {{this.end}}</div>
-            <div class="project-card-id">{{this.id}}</div>
+            <div class="project-card-id">#{{this.id}}</div>
           </div>
         </a>
       </li>
