--- a/__views/layouts/main.handlebars
+++ b/__views/layouts/main.handlebars
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sat Oct 01 2016 10:09:28 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Sep 30 2016 10:34:29 GMT+0000 (UTC)  -->
 <html data-wf-page="57da536ca0b21bf9369455e0" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head>
   <meta charset="utf-8">
@@ -17,23 +17,23 @@
       }
     });
   </script>
-  <script src="js/modernizr.js" type="text/javascript"></script>
+  <script src="/js/modernizr.js" type="text/javascript"></script>
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
   <header class="header">
     <div class="titles">
-      <a class="titles-link w-inline-block" href="/index">
+      <a class="titles-link w-inline-block" href="/">
         <h1 class="title">VBA</h1>
         <h2 class="sub-title">mobile</h2>
       </a>
     </div>
 	{{#if loggedIn}}
-		<a href="/logout"><p class="username">{{username}}</p></a>
+		<p class="username">{{username}}</p>
 	{{else}}
     <a class="user w-inline-block" href="/login">
-      <img class="user-logo" height="56" src="images/ic_account_box_white_24px.svg" width="56">
+      <img class="user-logo" height="56" src="/images/ic_account_box_white_24px.svg" width="56">
     </a>
   {{/if}}
 </header>
