--- a/views/survey.handlebars
+++ b/views/survey.handlebars
@@ -5,26 +5,25 @@
       <li class="project-card">
         <a class="card-link w-inline-block" href="/surveyspage">
           <div class="survey-detail">
-            <div class="card-title">Survey</div>
-            <div class="project-card-title">{{this.detail.title}}</div>
-            <div>{{this.detail.desc}}</div>
+            <div class="card-title">Survey information :</div>
+            <div class="project-card-title">{{this.surveyNme}}</div>
+            <div>{{this.surveyComm}}</div>
             <div class="project-card-footer">
-              <div class="project-card-dates">{{this.detail.start}} &#x279E; {{this.detail.end}}</div>
-              <div class="project-card-id">#{{this.detail.id}}</div>
+              <div class="project-card-dates">{{this.surveyStart}} &#x279E; {{this.surveyEnd}}</div>
+              <div class="project-card-id">#{{this.surveyId}}</div>
             </div>
           </div>
           <div class="survey-site">
-            <div class="card-title">Locality</div>
-            <div class="project-card-title">Site name...</div>
-            <p>From the Hamilton Hwy travel north up Common Rd...</p>
+            <div class="card-title">Site Description :</div>
+            <div class="project-card-title">{{this.siteName}}</div>
+            <p>{{this.siteDesc}}</p>
             <div class="gps-location">
-              <div>Lat : 144.0447</div>
-              <div>Lat : 144.0447</div>
+              <div>Lat : {{this.lat}}</div>
+              <div>Long : {{this.long}}</div>
             </div>
-            <div>This is some text inside of a div block.</div>
             <div class="project-card-footer">
-              <div class="project-card-dates">Accuracy : 50 m</div>
-              <div class="project-card-id">#1214</div>
+              <div class="project-card-dates">Accuracy : {{this.accu}} m</div>
+              <div class="project-card-id">#{{this.siteId}}</div>
             </div>
           </div>
         </a>
