--- a/oldViews/views_7/layouts/main.handlebars
+++ b/oldViews/views_7/layouts/main.handlebars
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <!--  Last Published: Sat Oct 01 2016 10:09:28 GMT+0000 (UTC)  -->
-<html data-wf-page="57ced8c91d3807cb6dad5f36" data-wf-site="57ced8c91d3807cb6dad5f35">
+<html data-wf-page="57da536ca0b21bf9369455e0" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head>
   <meta charset="utf-8">
-  <title>Vba mobile</title>
+  <title>main</title>
+  <meta content="main" property="og:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/components.css" rel="stylesheet" type="text/css">
-  <link href="css/vbamobile.css" rel="stylesheet" type="text/css">
+  <link href="/css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="/css/components.css" rel="stylesheet" type="text/css">
+  <link href="/css/vbamobile.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
   <script type="text/javascript">
     WebFont.load({
@@ -23,19 +24,24 @@
 <body class="body">
   <header class="header">
     <div class="titles">
-      <h1 class="title">VBA</h1>
-      <h2 class="sub-title">mobile</h2>
+      <a class="titles-link w-inline-block" href="/index">
+        <h1 class="title">VBA</h1>
+        <h2 class="sub-title">mobile</h2>
+      </a>
     </div>
-    <a class="username" href="#">username</a>
-  </header>
-  <main class="content-wrapper">
-    <div class="button-container">
-      <a class="project-button w-button" href="/project">+&nbsp;New Project</a>
-      <a class="project-button w-button" href="projects.html">View Project</a>
-    </div>
-  </main>
+	{{#if loggedIn}}
+		<a href="/logout"><p class="username">{{username}}</p></a>
+	{{else}}
+    <a class="user w-inline-block" href="/login">
+      <img class="user-logo" height="56" src="images/ic_account_box_white_24px.svg" width="56">
+    </a>
+  {{/if}}
+</header>
+
+	{{{body}}}
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-  <script src="js/vbamobile.js" type="text/javascript"></script>
+  <script src="/js/vbamobile.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
