--- a/oldViews/views_7/projects.handlebars
+++ b/oldViews/views_7/projects.handlebars
@@ -1,6 +1,6 @@
 <main class="content-wrapper">
-  <h1 >Projects list</h1>
-  <ul class="projects-list w-list-unstyled">
+<h1 class="section-title">Projects list</h1>
+<ul class="projects-list w-list-unstyled">
   {{#each project}}
     <li class="project-card">
       <a class="card-link w-inline-block" href="/project/{{this.id}}/surveys" >
@@ -13,5 +13,5 @@
       </a>
     </li>
   {{/each}}
-  </ul>
+</ul>
 </main>
