--- a/views/css/vbamobile.css
+++ b/views/css/vbamobile.css
@@ -1,5 +1,4 @@
 body {
-  background-color: #3d8546;
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   color: #333;
   font-size: 14px;
@@ -9,7 +8,6 @@ body {
 .body {
   max-height: 100%;
   min-height: 100%;
-  background-color: #bac2ca;
   font-family: Roboto, sans-serif;
   font-size: 1em;
 }
@@ -73,6 +71,7 @@ body {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  background-color: #bac2ca;
 }
 
 .projects-button {
@@ -266,11 +265,11 @@ body {
 }
 
 .username {
-  margin-right: 5%;
   -webkit-align-self: center;
   -ms-flex-item-align: center;
   align-self: center;
   color: #fff;
+  text-align: center;
   text-decoration: none;
 }
 
@@ -413,11 +412,24 @@ body {
   align-items: stretch;
 }
 
-.projects-list {
-  display: block;
+.cards-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 75%;
   margin-top: 1rem;
   margin-bottom: 0px;
   padding-left: 0px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .project-card-footer {
@@ -432,7 +444,13 @@ body {
 }
 
 .project-card {
+  display: block;
   margin-bottom: 2%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   background-color: #e3eaf1;
   box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .73);
 }
@@ -468,8 +486,16 @@ body {
 }
 
 .card-link {
-  display: block;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   padding: 2%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   color: #000;
   text-decoration: none;
 }
@@ -483,6 +509,39 @@ body {
 .survey-site {
   padding-left: 1%;
   border-left: 5px solid rgba(0, 178, 169, .7);
+}
+
+.gps-location {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+}
+
+.logout {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-right: 7%;
+  padding-left: 1%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: #008a83;
+  text-decoration: none;
 }
 
 @media (max-width: 991px) {
@@ -537,6 +596,12 @@ body {
     -ms-flex: 1;
     flex: 1;
   }
+  .cards-list {
+    max-width: 90%;
+  }
+  .project-card {
+    max-width: 100%;
+  }
 }
 
 @media (max-width: 767px) {
@@ -551,10 +616,10 @@ body {
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    -webkit-box-align: stretch;
-    -webkit-align-items: stretch;
-    -ms-flex-align: stretch;
-    align-items: stretch;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
   .projects-button {
     margin-right: 0px;
@@ -638,6 +703,9 @@ body {
   .survey-form {
     padding-right: 4%;
     padding-left: 4%;
+  }
+  .cards-list {
+    max-width: 100%;
   }
 }
 
@@ -728,8 +796,8 @@ body {
     width: 40px;
   }
   .form {
-    padding-right: 4%;
-    padding-left: 4%;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
   }
   .form-header {
     margin-top: 1rem;
@@ -838,8 +906,26 @@ body {
     background-color: rgba(32, 21, 71, .8);
   }
   .survey-form {
-    padding-right: 4%;
-    padding-left: 4%;
+    padding-right: 0%;
+    padding-left: 0%;
+  }
+  .cards-list {
+    max-width: 100%;
+    padding-right: 0.25rem;
+    padding-left: 0.25rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
   }
   .project-card-footer {
     -webkit-box-pack: justify;
@@ -858,14 +944,10 @@ body {
     text-align: center;
   }
   .survey-detail {
-    border-color: #201547;
-    border-left-style: solid;
-    border-left-width: 6px;
+    border-left: 5px solid rgba(32, 21, 71, .7);
   }
   .survey-site {
-    border-color: rgba(77, 75, 110, .7);
-    border-left-style: solid;
-    border-left-width: 5px;
+    border-left: 5px solid rgba(0, 178, 169, .7);
   }
   .gps-location {
     display: -webkit-box;
@@ -878,6 +960,10 @@ body {
   }
   .section-title {
     padding-left: 3%;
+  }
+  .logout {
+    margin-right: 0%;
+    padding-left: 2%;
   }
 }
 
