--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sat Oct 01 2016 10:09:28 GMT+0000 (UTC)  -->
+<!--  Last Published: Tue Oct 04 2016 02:03:31 GMT+0000 (UTC)  -->
 <html data-wf-page="57da536ca0b21bf9369455e0" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head>
   <meta charset="utf-8">
@@ -17,28 +17,31 @@
       }
     });
   </script>
-  <script src="js/modernizr.js" type="text/javascript"></script>
+  <script src="/js/modernizr.js" type="text/javascript"></script>
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
   <header class="header">
     <div class="titles">
-      <a class="titles-link w-inline-block" href="/index">
+      <a class="titles-link w-inline-block" href="/">
         <h1 class="title">VBA</h1>
         <h2 class="sub-title">mobile</h2>
       </a>
     </div>
-	{{#if loggedIn}}
-		<a href="/logout"><p class="username">{{username}}</p></a>
-	{{else}}
+    {{#if loggedIn}}
+		<a class="logout w-inline-block" href="/logout">
+      <div class="username">{{username}}
+        <br>Logout</div>
+    </a>
+    {{else}}
     <a class="user w-inline-block" href="/login">
       <img class="user-logo" height="56" src="images/ic_account_box_white_24px.svg" width="56">
-    </a>
-  {{/if}}
-</header>
+    </a> 
+    {{/if}}
+  </header>
 
-	{{{body}}}
+  {{{body}}}
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
   <script src="/js/vbamobile.js" type="text/javascript"></script>
