fixed bugs on the render of the species list

--- a/views/species.handlebars
+++ b/views/species.handlebars
@@ -6,27 +6,27 @@
           <div class="survey-detail">
             <div class="row">
               <div>Method :</div>
-              <div class="response">{{this.method.name}}</div>
+              <div class="response">{{method.name}}</div>
             </div>
             <div class="row">
               <div>Discipline :</div>
-              <div class="response">{{this.method.discipline}}</div>
+              <div class="response">{{method.discipline}}</div>
             </div>
             <div class="row">
               <div>Area sampled :</div>
-              <div class="response">{{this.method.area}}</div>
+              <div class="response">{{method.area}}</div>
             </div>
             <div class="row">
               <div>Number of Observers :</div>
-              <div class="response">{{this.method.obs}}</div>
+              <div class="response">{{method.obs}}</div>
             </div>
             <div class="row">
               <div>Number of species :</div>
-              <div class="response">{{this.method.species}}</div>
+              <div class="response">{{method.species}}</div>
             </div>
             <div class="project-card-footer">
-              <div class="project-card-dates">{{this.method.start}} &#x279E; {{this.method.end}}</div>
-              <div class="project-card-id"><span class="number-sign">#</span>{{this.method.id}}</div>
+              <div class="project-card-dates">{{method.start}} &#x279E; {{method.end}}</div>
+              <div class="project-card-id"><span class="number-sign">#</span>{{method.id}}</div>
             </div>
           </div>
         </a>
@@ -35,7 +35,7 @@
       <li class="project-card">
         <a class="card-link w-inline-block" href="#">
           <div class="taxon">
-            <div class="taxon-names">{{this.commonName}}
+            <div class="taxon-names">{{this.commonNme}}
               <br>{{this.scientificNme}}</div>
             <div class="project-card-footer">
             {{#if totalCountInt}}
