--- a/views/css/vbamobile.css
+++ b/views/css/vbamobile.css
@@ -417,8 +417,6 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  max-width: 75%;
-  min-width: 50%;
   margin-top: 1rem;
   margin-bottom: 0px;
   padding-left: 0px;
@@ -453,7 +451,6 @@ body {
   -ms-flex-direction: column;
   flex-direction: column;
   background-color: #fff;
-  box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .73);
 }
 
 .project-card.method {
@@ -501,6 +498,8 @@ body {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+  background-color: #fff;
+  box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .73);
   color: #000;
   text-decoration: none;
 }
@@ -509,6 +508,7 @@ body {
   margin-bottom: 1%;
   padding-left: 1%;
   border-left: 5px solid rgba(32, 21, 71, .7);
+  background-color: #fff;
 }
 
 .survey-site {
@@ -581,6 +581,13 @@ body {
   justify-content: space-between;
 }
 
+.row.rowleft {
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
 .response {
   font-weight: 700;
 }
@@ -592,6 +599,25 @@ body {
 .survey-comms {
   margin-top: 1%;
   margin-bottom: 1%;
+}
+
+.content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  min-width: 50%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.add-species-button {
+  margin: 2%;
+  border-radius: 8px;
+  background-color: #00b2a9;
 }
 
 @media (max-width: 991px) {
@@ -646,17 +672,13 @@ body {
     -ms-flex: 1;
     flex: 1;
   }
-  .cards-list {
-    max-width: 90%;
-    min-width: 75%;
-  }
-  .project-card {
-    max-width: 100%;
-  }
   .gps-location {
     -webkit-justify-content: space-around;
     -ms-flex-pack: distribute;
     justify-content: space-around;
+  }
+  .content {
+    min-width: 75%;
   }
 }
 
@@ -766,6 +788,9 @@ body {
   }
   .taxon {
     padding-left: 2%;
+  }
+  .content {
+    min-width: 90%;
   }
 }
 
@@ -1055,6 +1080,9 @@ body {
   }
   .number-sign {
     color: rgba(0, 0, 0, .44);
+  }
+  .add-species-button {
+    min-width: 100%;
   }
 }
 
