--- a/views/species.handlebars
+++ b/views/species.handlebars
@@ -1,57 +1,58 @@
 <main class="content-wrapper">
-    <h1 class="section-title">Species list</h1>
-    <ul class="cards-list w-list-unstyled">
-      <li class="method project-card">
-        <a class="card-link w-inline-block" href="/surveyspage">
-          <div class="survey-detail">
-            <div class="row">
-              <div>Method :</div>
-              <div class="response">{{method.name}}</div>
-            </div>
-            <div class="row">
-              <div>Discipline :</div>
-              <div class="response">{{method.discipline}}</div>
-            </div>
-            {{#if method.area}}
-            <div class="row">
-              <div>Area sampled :</div>
-              <div class="response">{{method.area}}</div>
-            </div>
+    <div class="content">
+      <h1 class="section-title">Species list</h1>
+      <a class="card-link w-inline-block" href="#">
+        <div class="survey-detail">
+          <div class="row">
+            <div>Method :</div>
+            <div class="response">{{method.name}}</div>
+          </div>
+          <div class="row">
+            <div>Discipline :</div>
+            <div class="response">{{method.discipline}}</div>
+          </div>
+          {{#if method.area}}
+          <div class="row">
+            <div>Area sampled :</div>
+            <div class="response">{{method.area}}</div>
+          </div>
+          {{/if}}
+          {{#if method.obs}}
+          <div class="row">
+            <div>Number of Observers :</div>
+            <div class="response">{{method.obs}}</div>
+          </div>
+          {{/if}}
+          <div class="row">
+            <div>Number of species :</div>
+            <div class="response">{{method.species}}</div>
+          </div>
+          <div class="project-card-footer">
+            {{#if method.dateDisplay}}
+            <div class="project-card-dates">{{method.start}} &#x279E; {{method.end}}</div>
             {{/if}}
-            {{#if method.obs}}
-            <div class="row">
-              <div>Number of Observers :</div>
-              <div class="response">{{method.obs}}</div>
-            </div>
-            {{/if}}
-            <div class="row">
-              <div>Number of species :</div>
-              <div class="response">{{method.species}}</div>
-            </div>
-            <div class="project-card-footer">
-              {{#if method.dateDisplay}}
-              <div class="project-card-dates">{{method.start}} &#x279E; {{method.end}}</div>
+            <div class="project-card-id"><span class="number-sign">#</span>{{method.id}}</div>
+          </div>
+        </div>
+      </a>
+      <a class="add-species-button w-button" href="/newspecies">add Taxon</a>
+      <ul class="cards-list w-list-unstyled">
+        {{#each taxon}}
+        <li class="project-card">
+          <a class="card-link w-inline-block" href="#">
+            <div class="taxon">
+              <div class="taxon-names">{{this.commonNme}}
+                <br>{{this.scientificNme}}</div>
+              <div class="project-card-footer">
+              {{#if this.totalCountInt}}
+                <div class="taxon-count">Count : {{this.totalCountInt}}</div>
               {{/if}}
-              <div class="project-card-id"><span class="number-sign">#</span>{{method.id}}</div>
+                <div class="taxon-id"><span class="number-sign">#</span>{{this.taxonId}}</div>
+              </div>
             </div>
-          </div>
-        </a>
-      </li>
-    {{#each taxon}}
-      <li class="project-card">
-        <a class="card-link w-inline-block" href="#">
-          <div class="taxon">
-            <div class="taxon-names">{{this.commonNme}}
-              <br>{{this.scientificNme}}</div>
-            <div class="project-card-footer">
-            {{#if this.totalCountInt}}
-              <div class="taxon-count">Count : {{this.totalCountInt}}</div>
-            {{/if}}
-              <div class="taxon-id"><span class="number-sign">#</span>{{this.taxonId}}</div>
-            </div>
-          </div>
-        </a>
-      </li>
-    {{/each}}
-    </ul>
+          </a>
+        </li>
+        {{/each}}
+      </ul>
+    </div>
   </main>
