read data from add taxon record form

--- a/views/newTaxonRecord.handlebars
+++ b/views/newTaxonRecord.handlebars
@@ -1,6 +1,6 @@
 <main class="content-wrapper">
     <div class="form w-form">
-      <form action="/addspecie" class="survey-form" data-name="Email Form" data-redirect="/survey/:id/species" id="email-form" method="post" name="email-form" redirect="/survey/:id/species">
+      <form action="/addTaxon" class="survey-form" data-name="Taxon"  id="email-form" method="post" name="email-form" redirect="/survey/:id/species">
         <div class="form-inner-container">
           <h1 class="form-header">Add taxon</h1>
           <label for="name">Taxon :</label>
