--- a/views/species.handlebars
+++ b/views/species.handlebars
@@ -35,7 +35,7 @@
           </div>
         </div>
       </a>
-      <a class="add-species-button w-button" href="/addTaxon">add Taxon</a>
+      <a class="add-species-button w-button" href="/survey/{{survey.id}}/method/{{method.id}}/taxonRecord">add Taxon</a>
       <ul class="cards-list w-list-unstyled">
         {{#each taxon}}
         <li class="project-card">
