--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,9 @@
   <link href="/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/css/components.css" rel="stylesheet" type="text/css">
   <link href="/css/vbamobile.css" rel="stylesheet" type="text/css">
+  {{#if awesomplete}}
+  <link href="/css/awesomplete.css" rel="stylesheet" type="text/css">
+  {{/if}}
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
   <script type="text/javascript">
     WebFont.load({
@@ -45,6 +48,12 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
   <script src="/js/vbamobile.js" type="text/javascript"></script>
+  
+  {{#if awesomplete}}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/awesomplete/1.1.1/awesomplete.min.js"></script>
+  <script src="/js/awesomplete-taxon.js" type="text/javascript"></script>
+  {{/if}}
+
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
